--- a/Oscillator.rc
+++ b/Oscillator.rc
@@ -1,5 +1,6 @@
 #include "resource.h"
 
+BG_ID                        PNG   BG_FN
 IFADERCONTROL_VERT_ID        PNG   IFADERCONTROL_VERT_FN
 IRADIOBUTTONSCONTROL_ID       PNG   IRADIOBUTTONSCONTROL_FN
 ISWITCHCONTROL_2_ID           PNG   ISWITCHCONTROL_2_FN
